@startuml
skinparam classAttributeIconSize 0

package Controllers {

    class EmployeeController {
        - repository : EmployeeRepository
        + EmployeeController(repository : EmployeeRepository)
        + all() : List<Employee>
        + newEmployee(newEmployee : Employee) : Employee
        + one(id : long) : Employee
        + updateEmployee(id : long, updates : Map<String, Object>) : Employee
        + deleteEmployee(id : long) : void
    }

    class DepartmentController {
        - repository : DepartmentRepository
        + DepartmentController(repository : DepartmentRepository)
        + all() : List<Department>
        + newDepartment(newDepartment : Department) : Department
        + one(name : string) : Department
        + deleteDepartment(name : string) : void
    }
}

package Entities {
    class Employee {
        - id : Long
        - email : String
        - name : String
        - role : String
        - department : Department
        + Employee()
        + Employee(email : String, name : String, role : String, department : Department)
        + getId() : Long
        + getEmail() : String
        + setEmail(email : String) : void
        + getName() : String
        + setName(name : String) : void
        + getRole() : String
        + setRole(role : String) : void
        + getDepartment() : Department
        + setDepartment(department : Department) : void
        + equals(o : Object) : boolean
        + hashCode() : int
        + toString() : String
    }

    class Department {
        - id : Long
        - name : String
        + Department()
        + Department(name : String)
        + getId() : Long
        + getName() : String
        + setName(name : String) : void
        + equals(o : Object) : boolean
        + hashCode() : int
        + toString() : String
    }
}

package Repositories {
    interface EmployeeRepository {
        + findByEmail(email : String) : Optional<Employee>
        + findByDepartment(department : Department) : List<Employee>
    }

    interface DepartmentRepository {
        + findByName(name : String) : Optional<Department>
    }
}

EmployeeController --> EmployeeRepository
EmployeeController --> Employee
DepartmentController --> DepartmentRepository
DepartmentController --> Department

EmployeeRepository ..> JpaRepository : extends
DepartmentRepository ..> JpaRepository : extends

Employee "1" --> "*" Department
Department "1" --> "*" Employee

@enduml
